Change 3d modelling locale to be object (wip)

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,7 +1,37 @@
 {
-  "alt_3d-modelling_donuts": "Zwei Donuts liegen auf einem Teller auf einem Tisch.",
-  "alt_3d-modelling_light-bulbs": "Eine Glühbirne leuchtet unter vielen anderen, die aus sind. Das Licht scheint durch die Gläser hindurch. ",
-  "alt_3d-modelling_man-bust": "Die Büste eines finster dreinblickenden Mannes. ",
+  "3d-modelling": {
+    "meta": {
+      "meta-description_3d-modelling": "Gerenderte Szenen, die mit Blender und Sculptris erstellt wurden. Dafür waren Kenntnisse über Modelling, Rendern und Post-Produktion notwendig. ",
+      "meta-author_3d-modelling": "Lukas Semmler",
+      "meta-keywords_3d-modelling": "User Experience Design, Portfolio"
+    },
+    "alt": {
+      "alt_thumbnail_3d-modelling": "3D-Modellierung – Modellieren, Rendern. ",
+      "alt_3d-modelling_donuts": "Zwei Donuts liegen auf einem Teller auf einem Tisch.",
+      "alt_3d-modelling_light-bulbs": "Eine Glühbirne leuchtet unter vielen anderen, die aus sind. Das Licht scheint durch die Gläser hindurch. ",
+      "alt_3d-modelling_man-bust": "Die Büste eines finster dreinblickenden Mannes. "
+    },
+    "project-description_3d-modelling": [
+      "Ich interessiere mich für 3D-Modellierung und habe daher in meiner Freizeit mit Blender und Sculptris gearbeitet. "
+    ],
+    "projectSummary": {
+      "project-summary-client_3d-modelling": "Freie Arbeit",
+      "project-summary-date_3d-modelling": "März 2018",
+      "project-summary-format_3d-modelling": "Bildschirm, Full&nbsp;HD",
+      "project-summary-name_3d-modelling": "Donuts, Kopf, Glühbirne",
+      "project-summary-tasks_3d-modelling": "Modellieren, Rendern"
+    },
+    "text": {
+      "text_3d-modelling_general": [
+        "Ich interessiere mich für 3D-Modellierung und habe daher ",
+        "in meiner Freizeit mit Blender und Sculptris gearbeitet. "
+      ]
+    },
+    "project-link-title_3d-modelling": "3D-Modellierung",
+    "project-nav_3d-modelling": "3D-Modellierung",
+    "project-subtitle_3d-modelling": "Modellier-Übungen",
+    "project-title-raw_3d-modelling": "3D-Model&shy;lierung"
+  },
   "alt_about_portrait": "Lukas Semmler Porträt",
   "alt_data-visualization_data-analysis": "Die erhobenen Daten, in einer Tabelle eingetragen. ",
   "alt_data-visualization_data-pivot": "Die ausgewerteten Daten. Man sieht die Zusammenhänge zwischen mehreren Datensätzen. ",
@@ -138,7 +168,6 @@
   "alt_thi-move_screen-design_questionnaire": "Seite, die die Ergebnisse eines Fragebogens zeigen. ",
   "alt_thi-move_screen-design_review": "Seite, die ein Formular zum Schreiben eines Reiseberichtes zeigt. ",
   "alt_thi-move_screen-design_world-map": "Seite, auf der man die Weltkarte sieht. ",
-  "alt_thumbnail_3d-modelling": "3D-Modellierung – Modellieren, Rendern. ",
   "alt_thumbnail_data-visualization": "Datenvisualisierung – Datenerhebung, Datenvisualisierung, Icondesign. ",
   "alt_thumbnail_design-booklet": "Gestaltungsbooklet – Layout. ",
   "alt_thumbnail_general": "Lukas Semmler",
@@ -433,7 +462,6 @@
   "label_tag_sketches": "Skizzen",
   "label_tag_user-survey": "Umfrage",
   "label_tag_ux-testing": "UX Testing",
-  "meta-author_3d-modelling": "Lukas Semmler",
   "meta-author_404": "Lukas Semmler",
   "meta-author_about": "Lukas Semmler",
   "meta-author_contact": "Lukas Semmler",
@@ -447,7 +475,6 @@
   "meta-author_projects": "Lukas Semmler",
   "meta-author_steering-wheel": "Lukas Semmler",
   "meta-author_thi-move": "Lukas Semmler",
-  "meta-description_3d-modelling": "Gerenderte Szenen, die mit Blender und Sculptris erstellt wurden. Dafür waren Kenntnisse über Modelling, Rendern und Post-Produktion notwendig. ",
   "meta-description_404": "Lukas Semmler ist studierter User Experience Design. Leider konnte diese Seite nicht gefunden werden. ",
   "meta-description_about": "Lukas Semmler ist studierter User Experience Designer. Er gestaltet die digitalen Schnittstellen zwischen Mensch und Maschine. ",
   "meta-description_contact": "Kontakt über kontakt@lukassemmler.de. ",
@@ -461,7 +488,6 @@
   "meta-description_projects": "Die Projekte beschäftigen sich mit Themen wie Screendesign, Icondesign und Konzeption. ",
   "meta-description_steering-wheel": "Ein Lenkrad, das Schreiben während der Autonomen Fahrt ermöglicht. Das Konzept zeigt eine Möglichkeit, während einer autonomen Fahrt zu arbeiten. ",
   "meta-description_thi-move": "THI move ist eine Plattform, die Studenten hilft, im Ausland zu studieren. Das Konzept wurde für die Technische Hochschule Ingolstadt entwickelt. ",
-  "meta-keywords_3d-modelling": "User Experience Design, Portfolio",
   "meta-keywords_404": "User Experience Design, Portfolio",
   "meta-keywords_about": "User Experience Design, Portfolio, Über mich",
   "meta-keywords_contact": "User Experience Design, Portfolio, Kontakt",
@@ -475,7 +501,6 @@
   "meta-keywords_projects": "User Experience Design, Portfolio, Übersicht",
   "meta-keywords_steering-wheel": "User Experience Design, Portfolio, Lenkrad, Autonomes Fahren",
   "meta-keywords_thi-move": "User Experience Design, Portfolio, Imagefilm, Online-Plattform",
-  "meta-title_3d-modelling": "3D-Modellierung",
   "meta-title_404": "404",
   "meta-title_about": "Über mich",
   "meta-title_contact": "Kontakt",
@@ -489,9 +514,6 @@
   "meta-title_projects": "Projekte",
   "meta-title_steering-wheel": "Lenkrad für autonomes Fahren",
   "meta-title_thi-move": "THI move",
-  "project-description_3d-modelling": [
-    "Ich interessiere mich für 3D-Modellierung und habe daher in meiner Freizeit mit Blender und Sculptris gearbeitet. "
-  ],
   "project-description_data-visualization": [
     "Das Plakat zeigt, wie Studenten zur Technischen Hochschule Ingolstadt kommen und wie sich deren Transportwege unterscheiden. ",
     "Dabei haben wir in Gruppenarbeit eine Umfrage gemacht und dann einzeln ein Plakat gestaltet. "
@@ -518,73 +540,60 @@
     "THI move ist eine Onlineplattform für Studenten, die im Ausland studieren oder ihr Praxissemester ablegen wollen. ",
     "Für das Konzept habe ich mit meinem Teamkollegen ein Konzept entworfen, die Plattform gestaltet, die Webseite animiert und in einem Film präsentiert. "
   ],
-  "project-link-title_3d-modelling": "3D-Modellierung",
   "project-link-title_data-visualization": "Datenvisualisierung",
   "project-link-title_design-booklet": "Gestaltungsbooklet",
   "project-link-title_infotainment-system": "Infotainment-System",
   "project-link-title_power-ui": "Power UI",
   "project-link-title_steering-wheel": "Lenkrad für autonomes Fahren",
   "project-link-title_thi-move": "THI move",
-  "project-nav_3d-modelling": "3D-Modellierung",
   "project-nav_data-visualization": "Datenvisualisierung",
   "project-nav_design-booklet": "Gestaltungsbooklet",
   "project-nav_infotainment-system": "Infotainmentsystem",
   "project-nav_power-ui": "Power-UI",
   "project-nav_steering-wheel": "Lenkrad für autonomes Fahren",
   "project-nav_thi-move": "THI move",
-  "project-subtitle_3d-modelling": "Modellier-Übungen",
   "project-subtitle_data-visualization": "Weg zur Hochschule als Poster",
   "project-subtitle_design-booklet": "gesammelte Design-Übungen",
   "project-subtitle_infotainment-system": "zwei UI-Konzepte für zwei Marken",
   "project-subtitle_power-ui": "Power-Management-Game-UI",
   "project-subtitle_steering-wheel": "Gewinner eines Produkt-Design-Wettbewerbes",
   "project-subtitle_thi-move": "Plattform für Auslands-Studenten",
-  "project-summary-client_3d-modelling": "Freie Arbeit",
   "project-summary-client_data-visualization": "Grundlagen der Gestaltung 2 (2. Semester)",
   "project-summary-client_design-booklet": "Grundlagen der Gestaltung 1 (1. Semester)",
   "project-summary-client_infotainment-system": "Grundlagen der Gestaltung 2 (2. Semester)",
   "project-summary-client_power-ui": "Bachelorarbeit",
   "project-summary-client_steering-wheel": "Software Prototyping und Usability Testing",
   "project-summary-client_thi-move": "Design der Mensch-Maschine-Schnittstellen (3.&nbsp;Semester)",
-  "project-summary-date_3d-modelling": "März 2018",
   "project-summary-date_data-visualization": "Juli 2017",
   "project-summary-date_design-booklet": "Januar 2017",
   "project-summary-date_infotainment-system": "Mai 2017",
   "project-summary-date_power-ui": "März 2020",
   "project-summary-date_steering-wheel": "April 2018",
   "project-summary-date_thi-move": "Januar 2018",
-  "project-summary-format_3d-modelling": "Bildschirm, Full&nbsp;HD",
   "project-summary-format_data-visualization": "Plakat, DIN A1",
   "project-summary-format_design-booklet": "Booklet, 30cm x 30cm",
   "project-summary-format_infotainment-system": "Tablet, 2560 x 1800",
   "project-summary-format_power-ui": "Spiele-Prototypen",
   "project-summary-format_steering-wheel": "Bildschirm, Full HD",
   "project-summary-format_thi-move": "Bildschirm, Full&nbsp;HD",
-  "project-summary-name_3d-modelling": "Donuts, Kopf, Glühbirne",
   "project-summary-name_data-visualization": "Der Weg zur THI",
   "project-summary-name_design-booklet": "Übungen des 1. Semesters – Grundlagen der Gestaltung",
   "project-summary-name_infotainment-system": "Infotainmentsystem Google/Mercedes",
   "project-summary-name_power-ui": "Power-UI",
   "project-summary-name_steering-wheel": "Lenkrad für autonomes Fahren",
   "project-summary-name_thi-move": "THI&nbsp;move",
-  "project-summary-tasks_3d-modelling": "Modellieren, Rendern",
   "project-summary-tasks_data-visualization": "Datenerhebung, Datenvisualisierung und Plakatgestaltung",
   "project-summary-tasks_design-booklet": "Layout",
   "project-summary-tasks_infotainment-system": "Icondesign, Screendesign",
   "project-summary-tasks_power-ui": "Wireframing, UI-Design, Asset-Erstellung, Spiel-Programmierung, Nutzertests",
   "project-summary-tasks_steering-wheel": "Modellieren, Konstruieren",
   "project-summary-tasks_thi-move": "Screendesign, Animation, Filmen",
-  "project-title-raw_3d-modelling": "3D-Model&shy;lierung",
   "project-title-raw_data-visualization": "Daten&shy;visuali&shy;sierung",
   "project-title-raw_design-booklet": "Gestaltungs&shy;booklet",
   "project-title-raw_infotainment-system": "Infotainment&shy;system",
   "project-title-raw_power-ui": "Power UI",
   "project-title-raw_steering-wheel": "Lenkrad für autonomes Fahren",
   "project-title-raw_thi-move": "THI move",
-  "text_3d-modelling_general": [
-    "Ich interessiere mich für 3D-Modellierung und habe daher ",
-    "in meiner Freizeit mit Blender und Sculptris gearbeitet. "
-  ],
   "text_about_bad-at_1": "Schnellfeuer-Projekte",
   "text_about_bad-at_2": "Ungenaue Projekt-Anforderungen",
   "text_about_bad-at_3": "Geradlinige, wiederholende Aufgaben",
