Change title for projects headline on index

--- a/locales/de.json
+++ b/locales/de.json
@@ -201,7 +201,7 @@
   "heading_imprint_address": "Angaben gemäß § 5 TMG",
   "heading_imprint_contact": "Kontakt",
   "heading_imprint_copyright": "Urheberrecht",
-  "heading_index_projects": "Projekte",
+  "heading_index_projects": "Vorgestellte Projekte",
   "heading_infotainment-system_concept": "Konzeption",
   "heading_infotainment-system_google": "Google",
   "heading_infotainment-system_icon-design": "Icondesign",
