--- a/locales/en.json
+++ b/locales/en.json
@@ -201,7 +201,7 @@
   "heading_imprint_address": "Data after § 5 TMG",
   "heading_imprint_contact": "Contact",
   "heading_imprint_copyright": "Copyright",
-  "heading_index_projects": "Projects",
+  "heading_index_projects": "Featured Projects",
   "heading_infotainment-system_concept": "Concept",
   "heading_infotainment-system_google": "Google",
   "heading_infotainment-system_icon-design": "Icon design",
