Fix and style button 'all projects' on index

--- a/locales/de.json
+++ b/locales/de.json
@@ -234,6 +234,7 @@
   "heading_thi-move_paper-prototype": "Paperprototyping",
   "heading_thi-move_persona-and-moodboard": "Persona &amp; Moodboard",
   "heading_thi-move_screen-design": "Screendesign",
+  "label_all-projects": "Alle Projekte",
   "label_continue-reading": "Weiter...",
   "label_data_visualization_icon_commute": "Fahrtweg",
   "label_data_visualization_icon_cost": "Kosten",
