--- a/locales/en.json
+++ b/locales/en.json
@@ -234,6 +234,7 @@
   "heading_thi-move_paper-prototype": "Paper prototype",
   "heading_thi-move_persona-and-moodboard": "Persona and moodboard",
   "heading_thi-move_screen-design": "Screen design",
+  "label_all-projects": "All projects",
   "label_continue-reading": "More...",
   "label_data_visualization_icon_commute": "commute",
   "label_data_visualization_icon_cost": "cost",
